add category page

--- a/cart-full.html
+++ b/cart-full.html
@@ -670,8 +670,8 @@
             علاقه مندی ها...
         </div>
 
-        <div class="row mt-5">
-            <div class="col-3">
+        <div class="row mt-md-4">
+            <div class="col-12 col-md-6 col-lg-3 mt-4">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
@@ -737,7 +737,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-6 col-lg-3 mt-4">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
@@ -803,7 +803,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-6 col-lg-3 mt-4">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
@@ -869,7 +869,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-6 col-lg-3 mt-4">
                 <div class="swiper-slide border br-20 product-swiper-card position-relative">
                     <div class="position-absolute ">
                         <div class="d-flex align-items-center justify-content-center bg-white">
