--- a/my-account.html
+++ b/my-account.html
@@ -572,16 +572,10 @@
 
     <div class="max-width-blog-container mx-auto pt-3">
         <div class="row" x-data="{ activeTab: 1 }">
-            <div class="col-3">
-
-
-
-
-
-
+            <div class="col-12 col-lg-3">
                 <!-- تب 1 -->
                 <div @click="activeTab = 1" :class="activeTab === 1 ? 'tx-gg' : ''"
-                    class="p-3 cursor-pointer text-hover-green-2 d-flex align-items-center justify-content-between">
+                    class="p-3 cursor-pointer text-hover-green-2 d-flex align-items-center justify-content-between border-top">
                     <div class="fs17 fw-400 c-sec-2-color">داشبورد</div>
                     <div class="c-sec-color">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024"
@@ -697,8 +691,8 @@
                 </div>
 
                 <!-- تب 7 -->
-                <div @click="activeTab = 7" :class="activeTab === 7 ? 'tx-gg' : ''"
-                    class="border-top p-3 cursor-pointer text-hover-green-2 d-flex align-items-center justify-content-between">
+                <div 
+                    class="border-top p-3 cursor-pointer text-hover-green-2 d-flex align-items-center justify-content-between border-bottom">
                     <div class="fs17 fw-400 c-sec-2-color">خروج</div>
                     <div class="c-sec-color">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
@@ -714,7 +708,7 @@
                 </div>
 
             </div>
-            <div class="col-9">
+            <div class="col-12 col-lg-9 mt-4 mt-lg-0">
                 <!-- محتوای تب‌ها -->
                 <div class="p-3">
                     <div x-show="activeTab === 1">
@@ -737,17 +731,51 @@
 
                     </div>
                     <div x-show="activeTab === 2">
-                        <div class="message-box text-white p-4 mb-5">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <div>
-                                    هنوز هیچ سفارشی وجود ندارد.
-                                </div>
-                                <div>
-                                    <a href="" class="fw-700 fs15 text-white border-end pe-3">
-                                        لینک مورد نظر
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="table-responsive orders-table">
+                            <table class="table table-borderless table-borderless-custom w-100">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">
+                                            سفارش
+                                        </th>
+                                        <th scope="col">
+                                            تاریخ
+                                        </th>
+                                        <th scope="col">
+                                            وضعیت
+                                        </th>
+                                        <th scope="col">
+                                            جمع
+                                        </th>
+                                        <th scope="col">
+                                            عملیات
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="fw-700">
+                                            #5089
+                                        </td>
+                                        <td class="c-sec-2-color">
+                                            25 شهریور 1402
+                                        </td>
+                                        <td class="c-sec-2-color">
+                                            پرداخت شده
+                                        </td>
+                                        <td class="c-sec-2-color">
+                                            165 تومان برای 3 آیتم
+
+                                        </td>
+                                        <td>
+                                            <button class="fs14 py-2 px-4 cat-btn bg-hover-green">
+                                                مشاهده
+                                            </button>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div x-show="activeTab === 3">
@@ -765,27 +793,128 @@
                         </div>
                     </div>
                     <div x-show="activeTab === 4">
-                        <div class="message-box text-white p-4 mb-5">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <div>
-                                    هنوز هیچ آدرسی وجود ندارد.
+                        <div class="c-sec-2-color">
+                            آدرس‌های زیر به طور پیش‌فرض در صفحه پرداخت استفاده خواهند شد.
+                        </div>
+
+                        <div class="row mt-5">
+                            <div class="col-12 col-lg-6">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div>
+                                        <div class="fs30 fw-800">
+                                            آدرس حمل و نقل
+                                        </div>
+                                        <div class="mt-5 c-sec-2-color">
+                                            شما هنوز این نوع آدرس را تنظیم نکرده‌اید.
+                                        </div>
+
+                                    </div>
+                                    <div class="ps-lg-5">
+                                        <a href="">
+                                            <svg class="c-sec-2-color" stroke="currentColor" fill="none"
+                                                stroke-width="1.5" viewBox="0 0 24 24" aria-hidden="true" height="25"
+                                                width="25" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                    d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10">
+                                                </path>
+                                            </svg>
+                                        </a>
+                                    </div>
                                 </div>
-                                <div>
-                                    <a href="" class="fw-700 fs15 text-white border-end pe-3">
-                                        لینک مورد نظر
-                                    </a>
+                            </div>
+                            <div class="col-12 col-lg-6">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div>
+                                        <div class="fs30 fw-800">
+                                              آدرس صورت حساب 
+                                        </div>
+                                        <div class="mt-5 c-sec-2-color">
+                                            شما هنوز این نوع آدرس را تنظیم نکرده‌اید.
+                                        </div>
+
+                                    </div>
+                                    <div class="ps-lg-5">
+                                        <a href="">
+                                            <svg class="c-sec-2-color" stroke="currentColor" fill="none"
+                                                stroke-width="1.5" viewBox="0 0 24 24" aria-hidden="true" height="25"
+                                                width="25" xmlns="http://www.w3.org/2000/svg">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                    d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10">
+                                                </path>
+                                            </svg>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div x-show="activeTab === 5">
+                        <div class="row">
+                            <div class="col-6 mt-4">
+                                <span class="fw-600">
+                                    نام
+                                </span>
+                                <span class="text-danger">*</span>
+                                <input type="text" name="" class="base-inp w-100 px-4 mt-2" id="">
+                            </div>
+                            <div class="col-6 mt-4">
+                                <span class="fw-600">
+                                    نام خانوادگی
+                                </span>
+                                <span class="text-danger">*</span>
+                                <input type="text" name="" class="base-inp w-100 px-4 mt-2" id="">
+                            </div>
+                            <div class="col-12 mt-4">
+                                <span class="fw-600">
+                                    نام نمایشی
+                                </span>
+                                <span class="text-danger">*</span>
+                                <input type="text" name="" class="base-inp w-100 px-4 mt-2" id="">
+                                <div class="c-sec-2-color mt-1 px-2">
 
+                                    نام شما در بخش حساب کاربری و در بخش نظرات به این شکل نمایش داده خواهد شد
+                                </div>
+                            </div>
+                            <div class="col-12 mt-4">
+                                <span class="fw-600">
+                                    آدرس ایمیل
+                                </span>
+                                <span class="text-danger">*</span>
+                                <input type="email" name="" class="base-inp w-100 px-4 mt-2" id="">
 
+                            </div>
+                        </div>
 
+                        <div class="row mt-5">
+                            <div class="col-12  border p-4 position-relative">
+                                <div class="fw-600 position-absolute top-change-txt">
+                                    تغییر رمز عبور
+                                </div>
+                                <div class="mt-4">
+                                    <span class="fw-600">
+                                        رمز عبور فعلی (برای تغییر ندادن، خالی بگذارید)
 
+                                    </span>
+                                    <input type="text" name="" class="base-inp w-100 px-4 mt-2" id="">
+                                </div>
+                                <div class="mt-4">
+                                    <span class="fw-600">
+                                        رمز عبور جدید (برای تغییر رمز عبور، آن را خالی بگذارید)
+                                    </span>
+                                    <input type="text" name="" class="base-inp w-100 px-4 mt-2" id="">
+                                </div>
+                                <div class="mt-4">
+                                    <span class="fw-600">
+                                        تکرار رمز عبور جدید
+                                    </span>
+                                    <input type="text" name="" class="base-inp w-100 px-4 mt-2" id="">
+                                </div>
+                            </div>
+                        </div>
 
-
-
+                        <button class="mt-3 px-5 fw-600 cat-btn bg-hover-green ">
+                            ذخیره تغییرات
+                        </button>
                     </div>
                     <div x-show="activeTab === 6">
 
@@ -1388,7 +1517,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/swiper.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+<script src="js/alpinejs.js" defer></script>
 <script src="js/js.js"></script>
 
 </html>
