--- a/wishlist-full.html
+++ b/wishlist-full.html
@@ -978,6 +978,6 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/swiper.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+<script src="js/alpinejs.js" defer></script>
 <script src="js/js.js"></script>
 </html>
