--- a/wishlist-empty.html
+++ b/wishlist-empty.html
@@ -13,6 +13,66 @@
 </head>
 
 <body>
+    <div class="fixed-bottom mobile-bottom-menu bg-white border-top d-xl-none">
+        <div class="container-fluid ">
+            <div class="row align-items-center">
+                <div class="col-3 border-start">
+                    <div class="text-center text-hover-green">
+                        <svg class="" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                            stroke-linecap="round" stroke-linejoin="round" height="17" width="17"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                        </svg>
+                        <div class="fw-600 fs13 mt-1">
+                            جستجو
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 border-start">
+                    <div class="text-center text-hover-green">
+                        <svg class="" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 256 256"
+                            height="19" width="19" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M229.19,213c-15.81-27.32-40.63-46.49-69.47-54.62a70,70,0,1,0-63.44,0C67.44,166.5,42.62,185.67,26.81,213a6,6,0,1,0,10.38,6C56.4,185.81,90.34,166,128,166s71.6,19.81,90.81,53a6,6,0,1,0,10.38-6ZM70,96a58,58,0,1,1,58,58A58.07,58.07,0,0,1,70,96Z">
+                            </path>
+                        </svg>
+                        <div class="fw-600 fs13 mt-1">
+                            حساب کاربری
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 border-start">
+                    <div class="text-center text-hover-green">
+                        <svg class="" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
+                            height="19" width="19" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M349.6 64c-36.4 0-70.7 16.7-93.6 43.9C233.1 80.7 198.8 64 162.4 64 97.9 64 48 114.2 48 179.1c0 79.5 70.7 143.3 177.8 241.7L256 448l30.2-27.2C393.3 322.4 464 258.6 464 179.1 464 114.2 414.1 64 349.6 64zm-80.8 329.3l-4.2 3.9-8.6 7.8-8.6-7.8-4.2-3.9c-50.4-46.3-94-86.3-122.7-122-28-34.7-40.4-63.1-40.4-92.2 0-22.9 8.4-43.9 23.7-59.3 15.2-15.4 36-23.8 58.6-23.8 26.1 0 52 12.2 69.1 32.5l24.5 29.1 24.5-29.1c17.1-20.4 43-32.5 69.1-32.5 22.6 0 43.4 8.4 58.7 23.8 15.3 15.4 23.7 36.5 23.7 59.3 0 29-12.5 57.5-40.4 92.2-28.8 35.7-72.3 75.7-122.8 122z">
+                            </path>
+                        </svg>
+                        <div class="fw-600 fs13 mt-1">
+                            علاقه‌مندی
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="text-center text-hover-green">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
+                            height="17" width="17" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+                                d="M80 212v236a16 16 0 0 0 16 16h96V328a24 24 0 0 1 24-24h80a24 24 0 0 1 24 24v136h96a16 16 0 0 0 16-16V212">
+                            </path>
+                            <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"
+                                d="M480 256 266.89 52c-5-5.28-16.69-5.34-21.78 0L32 256m368-77V64h-48v69"></path>
+                        </svg>
+                        <div class="fw-600 fs13 mt-1">
+                            فروشگاه‌
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="">
         <!-- topbar -->
